--- a/6/css/style.css
+++ b/6/css/style.css
@@ -8,20 +8,23 @@
 .blue, .red, .yellow {
   width: 100px;
   height: 100px;
-  position: absolute;
+  position: relative;
 }
 .blue {
   background: blue;
   z-index: 2;
-  margin: 120px 0 0 100px;
+  left: 100px;
+  top: 120px;
 }
 .red {
   background: red;
   z-index: 1;
-  margin: 80px 0 0 60px;
+  left: 60px;
+  bottom: 20px;
 }
 .yellow {
   background:yellow;
   z-index: 3;
-  margin: 160px 0 0 140px;
+  left: 140px;
+  bottom: 40px;
 }
